# zero2prod

./: .env  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
.sqlx/: query-79565dc9da83b47b0aa9fee532f67eb6947384862134d617460606efc85f3a34.json
scripts/: db_init.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telementry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
