[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
reqwest = "0.12.25"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "2.6.0" }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
