[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
config = "0.15.19"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = "0.12.25"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "2.6.0" }
uuid = {version = "1.19.0", features = ["v4"]}

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
