[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
config = "0.15.19"
reqwest = "0.12.28"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "2.6.0" }
tracing = { version = "0.1.44", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
uuid = {version = "1.19.0", features = ["v4"]}

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

